--- a/home.html
+++ b/home.html
@@ -1256,20 +1256,18 @@ li a{
 
           <section class="reviews-slideshow">
             <div class="review">
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit."</p>
-              <p class="author">- John Doe</p>
+              <p>  “This is certainly the best vehicle importation experiences I have had over the years. Timatania Enterprises remained responsive and proactive all along the process and I was greeted with pleasant surprises at each turn. I intend to continue working with Timatania in the forseeable future and would absolutely recommend their services to anyone looking to import.”   </p>
+              <p class="author">- by ken ,Kenya</p>
             </div>
             <div class="review">
-              <p>"Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas."</p>
-              <p class="author">- Jane Smith</p>
+              <p>"I received the car in perfect condition. Well done to your team for the prompt and efficient service. Looking forward to doing more business with you in the future."</p>
+              <p class="author">- by wilson,Uganda</p>
             </div>
             <div class="review">
-              <p>"Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque auctor orci vel urna tempus."</p>
-              <p class="author">- Michael Johnson</p>
+              <p>"Timatania Enterprises is an epitome of customer excellence. Have been using them for vehicle clearance with no regrets. They have a very good feedback system and will always give the customer peace of mind. Very professional in the way they work and would certainly recommend them to anyone without any reservation whatsoever."</p>
+              <p class="author">- by samuel ,Kenyan</p>
             </div>
-            <div class="review">
-              <p>"Fusce et urna nec odio fringilla cursus."</p>
-              <p class="author">- Emily Brown</p>
+            
             </section>
 
 <br><br><br><br><br>
