--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>TMT Enterprise -Logistics| Freight</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <script
   src="https://kit.fontawesome.com/64d58efce2.js"
   crossorigin="anonymous"
