--- a/contact.html
+++ b/contact.html
@@ -329,6 +329,10 @@
             <p id="y"><B>Kampala - Uganda</B></p>
             <p >Richflo Building, 1st floor, Nakawa, Kampala - Uganda</p>
             <p>Office Line +256 778 925928</p>
+
+             <p id="y"><B>Nairobi - Kenya</B></p>
+            <p >Navigators Building, Kindaruma road - Off Ngong road Kilimani</p>
+            <p>Office Line +254 791 476454</p>
           
 
 
@@ -377,6 +381,10 @@
            <li >Kanal Plaza, Opposite Post Bank</a></li>
            <li >Mombasa - Kenya</a></li>
            <li >office Line +254727934355</a></li>
+
+             <li >Kindaruma road, Off Ngong road Kilimani</a></li>
+           <li >Nairobi - Kenya</a></li>
+           <li >office Line +254791476454</a></li>
          </ul>
        </div>
        <div class="footer-col">
