--- a/home.html
+++ b/home.html
@@ -1189,12 +1189,13 @@ color:green;
 display: block;
 }
 .ham{
+  
 display:block;
 }
 
 }
 nav{
-
+display:none;
 color:green;
 
 }
@@ -1260,10 +1261,10 @@ color:white;
       </nav>
     
     </nav>
-    <span style="font-size:30px;cursor:pointer;float:right;right:10px;" class="ham"  onclick="openNav()">&#9776;</span>
 
   </div>
 
+    <span style="font-size:30px;cursor:pointer;float:right;right:10px;" class="ham"  onclick="openNav()">&#9776;</span>
 
   <div id="myNav" class="overla">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
